<resources>
    <string name="app_name">Project1</string>
    <string name="HOME">HOME</string>
    <string name="std">student</string>
    <string name="admin">admin</string>
    <string name="announce">announce</string>
    <string name="washing">washing</string>
    <string name="pack">pack</string>
    <string name="notice">notice</string>
    <string name="column">column</string>
    <string name="packnotice">packnotice</string>
    <string name="fixnotice">fixnotice</string>
    <string name="washingstate">washingstate</string>
</resources>